Last commit 22 Jul 2015

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -63,84 +63,7 @@ h1 {
   margin: .67em 0;
   font-size: 2em;
 }
-.logo
-{
-  text-align: right;
-}
-.otr_btn
-{
-  text-align: center;
-  display: inline-block;
-  margin-bottom: 0;
-  font-size: 14px;
-  font-weight: normal;
-  line-height: 1.42857143;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  -ms-touch-action: manipulation;
-      touch-action: manipulation;
-  cursor: pointer;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  background-image: none;
-  border: 1px solid transparent;
-  border-radius: 4px;
-  color: white;
-  font-size: 13px;
-  font-family: cursive;
-  font-weight: bold;
-  background-color: #3B5998;
-  border-color: #3B5998;
-  height: 25px;
-}
-.btnsearch
-{
-  text-align: center;
-  display: inline-block;
-  margin-bottom: 0;
-  font-size: 14px;
-  font-weight: normal;
-  line-height: 1.42857143;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  -ms-touch-action: manipulation;
-      touch-action: manipulation;
-  cursor: pointer;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  background-image: none;
-  border: 1px solid transparent;
-  border-radius: 4px;
-  color: #333;
-  background-color: #fff;
-  border-color: #ccc;
-  height: 25px;
-}
-.font-color-default
-{
-  color: white;
-  font-size: 13px;
-  font-family: cursive;
-  font-weight: bold;
-}
-.header
-{
-  background-color:#3B5998;
-  padding:5px;
-  height: 35px;
-  width: 100%;
-}
-#search
-{
-    height:25px;
-    font-size:10pt;
-}
+
 mark {
   color: #000;
   background: #ff0;
@@ -3682,7 +3605,7 @@ tbody.collapse.in {
   background-color: #e5e5e5;
 }
 .dropdown-menu > li > a {
-  display: block;
+  display: inline;
   padding: 3px 20px;
   clear: both;
   font-weight: normal;
@@ -4225,6 +4148,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:focus {
   color: #fff;
   background-color: #337ab7;
+  font-size: 10px;
+  background-size: 10px
 }
 .nav-stacked > li {
   float: none;
