--- a/css/style.css
+++ b/css/style.css
@@ -1,68 +1,3 @@
-.logo
-{
-  text-align: right;
-}
-.otr_btn
-{
-  display: inline-block;
-  margin-bottom: 0;
-  font-size: 14px;
-  font-weight: normal;
-  line-height: 1.42857143;
-  text-align: center;
-  vertical-align: middle;
-  -ms-touch-action: manipulation;
-      touch-action: manipulation;
-  cursor: pointer;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  background-image: none;
-  color: white;
-  font-size: 13px;
-  font-family: cursive;
-  font-weight: bold;
-  background-color: #3B5998;
-  border-color: #3B5998;
-  height: 25px;
-}
-.verticalLine
-{
-  border-left: thick solid #ff0000;
-}
-.btnsearch
-{
-  text-align: center;
-  display: inline-block;
-  margin-bottom: 0;
-  font-size: 14px;
-  font-weight: normal;
-  line-height: 1.42857143;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  -ms-touch-action: manipulation;
-      touch-action: manipulation;
-  cursor: pointer;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  height: 25px;
-}
-.font-color-default
-{
-  color: white;
-  font-size: 13px;
-  font-family: cursive;
-  font-weight: bold;
-}
-#search
-{
-    height:15px;
-    font-size:12pt;
-}
 .label_header
 {
 	border: 1px solid #000;
@@ -83,4 +18,287 @@
   vertical-align: text-top;
   background-color: red;
   border-radius: 10px;
+}
+.logo
+{
+  text-align: right;
+}
+.otr_btn
+{
+  text-align: center;
+  display: inline-block;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+      touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  color: white;
+  font-size: 13px;
+  font-family: cursive;
+  font-weight: bold;
+  background-color: #3B5998;
+  border-color: #3B5998;
+  height: 25px;
+}.font-color-default
+{
+  color: white;
+  font-size: 13px;
+  font-family: cursive;
+  font-weight: bold;
+}
+.header
+{
+  background-color:#3B5998;
+  padding:5px;
+  height: 35px;
+  width: 100%;
+}
+#search
+{
+    height:25px;
+    font-size:10pt;
+}
+a {
+  color: #2d4b89;
+  background-color: transparent;
+}
+a:active,
+a:hover {
+  color: #001e3c;
+  background-color: transparent;
+  outline: 0;
+}
+.badge_def
+{
+  display: inline-block;
+  min-width: 10px;
+  padding: 3px 7px;
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 1;
+  color: white;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: text-top;
+  background-color: red;
+  border-radius: 10px;
+}
+.drop
+{
+  display: inline;
+  font-size: 15px;
+}
+.drop1
+{
+  display: inline;
+  font-size: 15px;
+  font-family: Georgia bold Italic;
+}
+.drop1 > a:hover
+{
+
+}
+.dropdown:hover .dropdown-menu:hover 
+{
+    color: #fff;
+    
+    display: block color:#3B5998 ;
+    margin-top: 5; // remove the gap so it doesn't close
+ }
+ .nav > li > a > img {
+  max-width: none;
+}
+.nav-tabs {
+  border-bottom: 1px solid #ddd;
+}
+.nav-tabs > li {
+  float: left;
+  margin-bottom: -1px;
+}
+.nav-tabs > li > a {
+  margin-right: 2px;
+  line-height: 1.42857143;
+  border: 1px solid transparent;
+  border-radius: 4px 4px 0 0;
+  font-size: 7px;
+}
+.nav-tabs > li > a:hover {
+  border-color: #eee #eee #ddd;
+  font-size: 7px;
+}
+.nav-tabs > li.active > a,
+.nav-tabs > li.active > a:hover,
+.nav-tabs > li.active > a:focus {
+  color: #555;
+  cursor: default;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-bottom-color: transparent;
+  font-size: 7px;
+  background-size: 8px
+}
+li
+{
+  font-size: 14px;
+  vertical-align: middle;
+}
+li > a:active
+{
+  background-color: #3B5998;
+  color:white;
+}
+li > a:hover
+{
+  font-size: 12px;
+  background-color: #fff;
+}
+li > font > a
+{
+  font-size: 10px;
+  text-align: right;
+}
+li > font > a:hover
+{
+  font-size: 10px;
+}
+li > ul > li > a
+{
+  font-size: 8px;
+}
+.new_btn
+{
+  display: inline block;
+  color: #333;
+  width: 400px;
+  height: 20px;
+  background-color: #fff;
+  border-color: #ccc;
+  padding: 6px 12px;
+  margin-bottom: 5px;
+  margin-top: 5px;
+
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+      touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+.new_btn:hover,
+.new_btn:focus,
+.new_btn.focus {
+  color: #333;
+  text-decoration: none;
+}
+.new_btn:active,
+.new_btn.active {
+  background-image: none;
+  outline: 0;
+  -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+          box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+}
+.new_btn.disabled,
+.new_btn[disabled],
+fieldset[disabled] .btn {
+  cursor: not-allowed;
+  filter: alpha(opacity=65);
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  opacity: .65;
+}
+a.new_btn.disabled,
+fieldset[disabled] a.btn {
+  pointer-events: none;
+}
+.new_btn:focus,
+.new_btn.focus {
+  color: #333;
+  background-color: #e6e6e6;
+  border-color: #8c8c8c;
+}
+.new_btn:hover {
+  color: #333;
+  background-color: #e6e6e6;
+  border-color: #adadad;
+}
+.new_btn:active,
+.new_btn.active,
+.open > .dropdown-toggle.new_btn {
+  color: #333;
+  background-color: #e6e6e6;
+  border-color: #adadad;
+}
+.new_btn:active:hover,
+.new_btn.active:hover,
+.open > .dropdown-toggle.new_btn:hover,
+.new_btn:active:focus,
+.new_btn.active:focus,
+.open > .dropdown-toggle.new_btn:focus,
+.new_btn:active.focus,
+.new_btn.active.focus,
+.open > .dropdown-toggle.new_btn.focus {
+  color: #333;
+  background-color: #d4d4d4;
+  border-color: #8c8c8c;
+}
+.new_btn:active,
+.new_btn.active,
+.open > .dropdown-toggle.new_btn {
+  background-image: none;
+}
+.new_btn.disabled,
+.new_btn[disabled],
+fieldset[disabled] .new_btn,
+.new_btn.disabled:hover,
+.new_btn[disabled]:hover,
+fieldset[disabled] .new_btn:hover,
+.new_btn.disabled:focus,
+.new_btn[disabled]:focus,
+fieldset[disabled] .new_btn:focus,
+.new_btn.disabled.focus,
+.new_btn[disabled].focus,
+fieldset[disabled] .new_btn.focus,
+.new_btn.disabled:active,
+.new_btn[disabled]:active,
+fieldset[disabled] .new_btn:active,
+.new_btn.disabled.active,
+.new_btn[disabled].active,
+fieldset[disabled] .new_btn.active {
+  background-color: #fff;
+  border-color: #ccc;
+}
+.new_btn .badge {
+  color: #fff;
+  background-color: #333;
+}
+.panel-group {
+  margin-bottom: 0;
+}
+.panel-group .panel {
+  border-radius: 2px;
+}
+.panel-group .panel + .panel {
+  margin-top: 2px;
 }
