--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -86,6 +86,7 @@ sub {
 }
 img {
   border: 0;
+  border-radius: 2; 
 }
 svg:not(:root) {
   overflow: hidden;
@@ -2559,7 +2560,7 @@ output {
   color: #555;
   background-color: #fff;
   background-image: none;
-  border: 1px solid #ccc;
+  border: none;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
@@ -3002,6 +3003,7 @@ select[multiple].input-lg {
 .btn {
   display: inline-block;
   padding: 6px 12px;
+  margin-top: 10px;
   margin-bottom: 0;
   font-size: 14px;
   font-weight: normal;
@@ -3124,8 +3126,11 @@ fieldset[disabled] .btn-default.active {
   background-color: #333;
 }
 .btn-primary {
-  color: #fff;
-  background-color: #337ab7;
+  font-size: 12px;
+  font-family: Arial;
+  font-weight: bold;
+  color: white;
+  background-color: #3B5998;
   border-color: #2e6da4;
 }
 .btn-primary:focus,
@@ -3136,7 +3141,7 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #286090;
+  background-color: #3B5998;
   border-color: #204d74;
 }
 .btn-primary:active,
@@ -3578,6 +3583,7 @@ tbody.collapse.in {
   left: 0;
   z-index: 1000;
   display: none;
+  height: inherit 100%;
   float: left;
   min-width: 160px;
   padding: 5px 0;
@@ -3701,12 +3707,16 @@ tbody.collapse.in {
 .btn-group-vertical {
   position: relative;
   display: inline-block;
-  vertical-align: middle;
+  vertical-align: top;
+  vertical-align: text-top;
+  border-color: 1px solid #ccc;
 }
 .btn-group > .btn,
 .btn-group-vertical > .btn {
-  position: relative;
   float: left;
+  height: 35px;
+  border-color: 1px solid #ccc;
+}
 }
 .btn-group > .btn:hover,
 .btn-group-vertical > .btn:hover,
@@ -3880,6 +3890,7 @@ tbody.collapse.in {
   position: relative;
   z-index: 2;
   float: left;
+  height: 100px;
   width: 100%;
   margin-bottom: 0;
 }
@@ -4798,7 +4809,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > li > span:focus {
   z-index: 3;
   color: #23527c;
-  background-color: #eee;
+  background-color: #585353;
   border-color: #ddd;
 }
 .pagination > .active > a,
