--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5309,6 +5309,7 @@ a.thumbnail.active {
 .list-group-item {
   position: relative;
   display: block;
+  height: auto;
   padding: 10px 15px;
   margin-bottom: -1px;
   background-color: #fff;
