--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,6 @@
 {
   background-color:#3B5998;
   padding:5px;
-  position: fixed;
   display: block;
   height: 35px;
   width: 100%;
@@ -73,7 +72,7 @@
     font-size:10pt;
 }
 a {
-  color: #2d4b89;
+  color: #284072;
   background-color: transparent;
 }
 span:hover
@@ -82,7 +81,8 @@ span:hover
 }
 a:active,
 a:hover {
-  color: #001e3c;
+  color: #1f335c;
+  text-decoration: none;
   background-color: transparent;
   outline: 0;
 }
@@ -154,7 +154,14 @@ li
 {
   font-size: 12px;
   vertical-align: middle;
+  color: black;
+  text-decoration: none;
   height: auto;
+}
+li:hover
+{
+  text-decoration: none;
+  color: black;
 }
 li > a:active
 {
@@ -164,6 +171,7 @@ li > a:active
 li > a:hover
 {
   font-size: 12px;
+  text-decoration: none;
   background-color: #fff;
 }
 li > font > a
@@ -317,6 +325,8 @@ ol {
   margin-top: 0;
   list-style-type: none;
   margin-bottom: 10px;
+  margin-right: 0px;
+  margin-left: -24px;
 }
 ul ul,
 ol ul,
@@ -328,6 +338,10 @@ ol ol {
   padding-left: 0;
   list-style-type: none;
   list-style: none;
+}
+ul > li
+{
+  margin-right: 0px;
 }
 .news{
   color: black;
